--- a/BurgerKing/index.html
+++ b/BurgerKing/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger King</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Parisienne&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -37,15 +41,13 @@
 
     <!-- Banner Content -->
     <div class="bannerText-container" style="height: 100vh;">
-        <section>
-            <h2>Fast Food Restaurant</h2><br>
-            <p>
-                Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia 
-                laborum quam quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat 
-                dolore, iste magni quos nihil ducimus libero ipsam.
-            </p><br>
-            <button class="order">Order Online</button>
-        </section>          
+        <h2>Fast Food Restaurant</h2><br>
+        <p>
+            Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia 
+            laborum quam quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat 
+            dolore, iste magni quos nihil ducimus libero ipsam.
+        </p><br>
+        <button class="order">Order Online</button>
     </div>
 
     <!-- off cards -->
