--- a/BurgerKing/menus/pizza.html
+++ b/BurgerKing/menus/pizza.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Parisienne&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/menu.css">
 </head>
@@ -14,7 +18,7 @@
         <!-- Nav Links -->
         <nav class="" id="nav">
             <ul>
-                <li><a href="./index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li><a href="../menu.html">MENU</a></li>
                 <li><a href="../about.html">ABOUT</a></li>
                 <li><a href="../table.html">BOOK TABLE</a></li>
